Carried on making maps look like contacts.

--- a/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
+++ b/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
@@ -119,6 +119,9 @@ div.list-footer a {
 div.list-note {
     background-color:#48505a;
     padding:10px;
+    color:#ffffff;
+    font-size:12pt;
+    
 }
 
 div.bubble {
