--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -5,9 +5,11 @@
 <div class="list-section">
 <h2 class="section-header">Maps</h2>
 
-<p>
-    <a href="{% url maps_nearby_list %}">Things near me</a>
-</p>
+<ul class="ml">
+    <li>
+        <a href="{% url maps_nearby_list %}">Things near me</a>
+    </li>
+</ul>
 </div>
 
 {% endblock %}
