--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -12,9 +12,14 @@
 <h2 class="section-header">Find things near {{ entity.title }}</h2>
 {% else %}
 <h2 class="section-header">Find things nearby</h2>
-</div
->
+
+<div class="list-note">
+{% if preferences.location.location %}
 <p>Please note that we think you are near <strong>{{ preferences.location.placemark.address }}</strong>. If this is not correct, please <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</p>
+{% else %}
+<div class="bubble">We do not yet have a location for you. Please <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
+{% endif %}
+</div>
 {% endif %}
 
 <ul class="ml">
@@ -24,5 +29,7 @@
     <li><a href="{% url maps_nearby_detail entity_type.slug %}">{{ entity_type.verbose_name|capfirst }}</a></li>
 {% endif %}{% endfor %}
 </ul>
+
+</div>
 
 {% endblock %}
