--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -36,7 +36,7 @@
     {% if page_count|gte:4 %}
     Your search returned {{results_count}} items. Try adding an initial to get more specific results.
 	{% else %}
-    Your search returned {{results_count}}
+    Your search returned {{results_count}} items.
     {% endif %}
   </div></div>
 
