Small fixes or anti-fixes

--- a/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
+++ b/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
@@ -35,9 +35,12 @@ ul.ml li.email {
     background-image:url('../../png/icons/list-email.png');
 }
 
+ul.ml li.arrow {
+    background-image:url('../../png/icons/list-arrow.png');
+}
+
 ul.ml li a {
 	color:#ffffff;
-    background-image:url('../../png/icons/list-arrow.png');
     text-decoration: none;
     display:block;
     padding-right:21px;
