--- a/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -15,7 +15,8 @@
 
 <div class="list-note">
 {% if preferences.location.location %}
-<p>Please note that we think you are near <strong>{{ preferences.location.placemark.address }}</strong>. If this is not correct, please <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</p>
+<div class="bubble">
+Please note that we think you are near <strong>{{ preferences.location.placemark.address }}</strong>. If this is not correct, please <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
 {% else %}
 <div class="bubble">We do not yet have a location for you. Please <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
 {% endif %}
