Added breadcrumb images for maps and results.

--- a/mobile_portal/mobile_portal/templates/maps/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/base.xhtml
@@ -2,9 +2,8 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-
 	<li><a href="{% url contact_index %}">
-        <img src="{{ MEDIA_URL }}png/contact-bc.png" alt="Maps"/>
+        <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
     </a></li>
 {% endblock %}
 
