layout changes webcam

--- a/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -10,7 +10,7 @@
 <div class="section-content">
 <ul class="ml">
 {% for webcam in webcams %}
-    <li>
+	<li class="{% if forloop.last and more_pages %} notbottom{% endif %}">
         <a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a>
     </li>
 {% endfor %}
