--- a/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -6,16 +6,13 @@
 
 
 <div class="list-section">
-<h2 class="section-header">Webcams</h2>
-<div class="section-content">
-<ul class="ml">
+	<h2 class="section-header">Webcams</h2>
+		<ul class="ml">
 {% for webcam in webcams %}
-	<li class="{% if forloop.last and more_pages %} notbottom{% endif %}">
-        <a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a>
-    </li>
+		<li class="{% if forloop.last and more_pages %} notbottom{% endif %}">
+        	<a href="{% url webcams_webcam webcam.slug %}">{{ webcam.title }}</a>
+    	</li>
 {% endfor %}
-</ul>
-
-</div></div>
-
+		</ul>
+	</div>
 {% endblock %}
