--- a/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -7,9 +7,6 @@
 
 {% block content %}
 
-<div class="list-section">
-	<h2 class="section-header">{{ category.name }}</h2>
-
 <p>Show
     <a href="{% url podcasts_category_medium category.code,"audio" %}">audio</a>
     <a href="{% url podcasts_category_medium category.code,"video" %}">video</a>
@@ -17,12 +14,16 @@
 podcasts.</p>
 
 
+<div class="list-section">
+	<h2 class="section-header">{{ category.name }}</h2>
+		<ul class="ml">
+
+
 {% for podcast in podcasts %}
     <li><a href="{{ podcast.get_absolute_url }}">{{ podcast.title }}</a> ({{ podcast.medium }}
     <br />{{ podcast.description }}</li>
 {% endfor %}
-
-
+		</ul>
 </div>
 
 {% endblock %}
