Added maps preferences

--- a/mobile_portal/mobile_portal/templates/maps/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/base.xhtml
@@ -2,7 +2,7 @@
 
 {% block breadcrumbs %}
 {{ block.super }}
-	<li><a href="{% url contact_index %}">
+	<li><a href="{% url maps_index %}">
         <img src="{{ MEDIA_URL }}png/maps-bc.png" alt="Maps"/>
     </a></li>
 {% endblock %}
