--- a/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+
 <div class="list-section">
 <h2 class="section-header">{{ data.dc_title }}</h2>
 
@@ -111,6 +112,13 @@
     <p>We do not yet have a location for this {{ entity.entity_type.verbose_name }}.</p>
 {% endif %}
 </div>
+
+<p>Is favourite: {{ entity.is_favourite }}</p>
+
+<form method="post" action="{% url maps_entity_favourite entity.entity_type.slug entity.display_id %}">
+<input type="hidden" name="is_favourite" value="{{ entity.is_favourite|yesno:"false,true" }}"/>
+<input type="submit" value="{{ entity.is_favourite|yesno:"unset,set" }}"/>
+</form>
 
 
 {% endblock %}
