Added contacts icon

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -25,7 +25,7 @@ ol.icon-menu li a {
 }
 
 li#menu-contact {
-    background-image:url('../../png/podcasts.png');
+    background-image:url('../../png/contacts.png');
 }
 
 li#menu-olis {
