Fixed padding issues when no <a/> in "ul.ml > li". Added category_list and category_detail views. Fixed remaining failing test whereby generated maps dir isn't created if it doesn't already exist. Fixed a couple of template style issues.

--- a/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
+++ b/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
@@ -13,7 +13,7 @@ ul.ml li {
     padding:10px;
     border-top:1px solid #98a1ac;
     background-color:#002147;
-	padding-right: 0;
+	padding-right: 10px;
 }
 
 ul.ml li.header {
@@ -28,6 +28,7 @@ ul.ml li.header {
 
 ul.ml a {
     background-image:url('../../png/icons/list-arrow.png');
+    padding-right: 11px;
 }
 
 ul.ml a.phone {
