--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -1,5 +1,4 @@
-{% load portal_misc %}<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE HTML>
+{% load portal_misc %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
     <title>{% block title %}Oxford Mobile Portal{% endblock %}</title>
