--- a/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -32,12 +32,18 @@
 
 {% endif %}
 
+<div class="list-section">
+<ul class="category_list ml">
+
+	{#CHANGE Following line to have a "TOP" ICON PLZ!#}
+	<li class="top"><a href="{% url podcasts_top_downloads %}">Top downloads from iTunesU</a></li>
+</ul>
+</div>
+
 <div class="list-section" >
-	<h2 class="section-header">Podcast Sources</h2>
+	<h2 class="section-header">By category</h2>
 <ul class="category_list ml">
 	
-	{#CHANGE Following line to have a "TOP" ICON PLZ!#}
-	<li><a href="{% url podcasts_top_downloads %}">Top downloads from iTunesU</a></li>
 	
 {% for category in categories %}
     <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
