--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -17,6 +17,8 @@
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"></script>    
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
+
+	{% if device|device_has_parent:"apple_iphone_ver1" %}<link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>{% endif %}
 {% endif %}
     <!--<script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>-->
