changed name of home page to make it shorter

--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -1,7 +1,7 @@
 {% load portal_misc %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
-    <title>{% block title %}Oxford Mobile Portal{% endblock %}</title>
+    <title>{% block title %}Mobile Oxford{% endblock %}</title>
     <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
 
     {% block stylesheets %}
