--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -1,6 +1,11 @@
 {% load portal_misc %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
   <head>
+	
+	{# iPhone specific title to fit on home screen - code should perhaps be moved elsewhere? #}
+	{% if device|device_has_parent:"apple_iphone_ver1" %}
+		<title>{% block title %}MobileOxford{% endblock %}</title>
+	{% endif %}
     <title>{% block title %}Mobile Oxford{% endblock %}</title>
     <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
 
@@ -18,6 +23,7 @@
     <script src="{{ MEDIA_URL }}js/gears_init.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
 
+	{# Apple Touch device icons #}
 	{% if device|device_has_parent:"apple_iphone_ver1" %}<link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>{% endif %}
 {% endif %}
     <!--<script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
