--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -5,8 +5,8 @@
 	{# iPhone specific title to fit on home screen - code should perhaps be moved elsewhere? #}
 	{% if device|device_has_parent:"apple_iphone_ver1" %}
 		<title>{% block title %}MobileOxford{% endblock %}</title>
+    {% else %}<title>{% block title %}Mobile Oxford{% endblock %}</title>
 	{% endif %}
-    <title>{% block title %}Mobile Oxford{% endblock %}</title>
     <meta name="viewport" content="width=device-width; user-scalable=no; maximum-scale=1; minimum-scale=1" />
 
     {% block stylesheets %}
