--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -29,7 +29,10 @@
     <script src="{{ MEDIA_URL }}js/geolocation.js" type="text/javascript"></script>
 
 	{# Apple Touch device icons #}
-	{% if device|device_has_parent:"apple_iphone_ver1" %}<link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>{% endif %}
+	{% if device|device_has_parent:"apple_iphone_ver1" %}
+		<link rel="apple-touch-icon" href="{{ MEDIA_URL}}/png/apple-touch-icon.png"/>
+		<link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}/png/apple-touch-startup-image.jpg">
+	{% endif %}
 {% endif %}
     <!--<script src="{{ MEDIA_URL }}openlayers/OpenLayers.js" type="text/javascript"></script>
     <script src="{{ MEDIA_URL }}openlayers/OpenLayers-osm.js" type="text/javascript"></script>-->
