--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -44,6 +44,9 @@
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}{{ path }}"/>    
     {% endfor %}
     
+	{# Favicon.png #}
+	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}/png/favicon.png">
+
     {% block extrahead %}{% endblock %}
     
   </head>
