changing background header

--- a/mobile_portal/mobile_portal/site-media/css/core/index.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index.css
@@ -4,3 +4,10 @@ div#title {
     text-align: center;
     font-size:14pt;
 }
+
+div#title-240 {
+	width: 100%;
+	text-align: center;
+	font-size:14pt;
+	background-image:url('../png/headers/home_header_bg_240.png');
+}
