--- a/mobile_portal/mobile_portal/site-media/css/core/index.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index.css
@@ -9,5 +9,5 @@ div#title-240 {
 	width: 100%;
 	text-align: center;
 	font-size:14pt;
-	background-image:url('../png/headers/home_header_bg_240.png');
+	background-image:url('../../png/headers/home_header_bg_240.png');
 }
