--- a/mobile_portal/mobile_portal/site-media/css/core/index.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index.css
@@ -10,4 +10,18 @@ div#title-240 {
 	text-align: center;
 	font-size:14pt;
 	background-image:url('../../png/headers/home_header_bg_240.png');
+	height: 46px;
+}
+
+div#title-160 {
+	width: 100%;
+	text-align: center;
+	background-image:url('../../png/headers/home_header_bg_160.png');
+}
+
+div#title-128 {
+	width: 100%;
+	text-align: center;
+	background-image:url('../../png/headers/home_header_bg_128.png');
+	
 }
